--- a/prod/service.yaml
+++ b/prod/service.yaml
@@ -2,13 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-	app: nginx-app
-  name: nginx-app-svc
+    app: demo-nginx
+  name: demo-nginx-svc
 spec:
   type: NodePort
   ports:
   - port: 80
-	protocol: TCP
-	targetPort: 80
+    protocol: TCP
+    targetPort: 80
   selector:
-	app: nginx-app
+    app: demo-nginx
+
