--- a/prod/service.yaml
+++ b/prod/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: demo-nginx
-  name: demo-nginx-svc
+    app: nginx-app
+  name: nginx-app-svc
 spec:
   type: NodePort
   ports:
@@ -11,5 +11,5 @@ spec:
     protocol: TCP
     targetPort: 80
   selector:
-    app: demo-nginx
+    app: nginx-app
 
