--- a/prod/service.yaml
+++ b/prod/service.yaml
@@ -2,14 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: nginx-app
-  name: nginx-app-svc
+    app: grafana
+  name: grafana-svc
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - port: 80
     protocol: TCP
-    targetPort: 80
+    targetPort: 31117
   selector:
-    app: nginx-app
+    app: grafana
+
 
