--- a/prod/service.yaml
+++ b/prod/service.yaml
@@ -2,15 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: grafana
-  name: grafana-svc
+    app: nginx-app
+  name: nginx-app-svc
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 80
     protocol: TCP
-    targetPort: 3000
+    targetPort: 80
   selector:
-    app: grafana
-
+    app: nginx-app
 
