--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -3,23 +3,23 @@ kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    app: nginx-app
-  name: nginx-app
+    app: proj-app
+  name: proj-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nginx-app
+      app: proj-app
   strategy: {}
   template:
     metadata:
       creationTimestamp: null
       labels:
-        app: nginx-app
+        app: proj-app
     spec:
       containers:
       - image: 637423550581.dkr.ecr.ap-northeast-2.amazonaws.com/eks-repo:94
-        name: nginx
+        name: proj
         ports:
         - containerPort: 80
 
