--- a/prod/service.yaml
+++ b/prod/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: nginx-app
-  name: nginx-app-svc
+    app: proj-app
+  name: proj-app-svc
 spec:
   type: NodePort
   ports:
@@ -11,5 +11,5 @@ spec:
     protocol: TCP
     targetPort: 80
   selector:
-    app: nginx-app
+    app: proj-app
 
