--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -22,4 +22,9 @@ spec:
         name: proj
         ports:
         - containerPort: 80
+        resources:
+          limits:
+            cpu: 500m
+          requests:
+            cpu: 200m
 
