--- a/prod/hpa.yaml
+++ b/prod/hpa.yaml
@@ -6,7 +6,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: proj-app
+    name: prod-proj-app
   minReplicas: 2
   maxReplicas: 10
   metrics:
