--- a/prod/hpa.yaml
+++ b/prod/hpa.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: proj-app-hpa
+  name: proj-app
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
