--- a/prod/hpa.yaml
+++ b/prod/hpa.yaml
@@ -6,7 +6,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: proj
+    name: proj-app
   minReplicas: 1
   maxReplicas: 10
   metrics:
